# Aeostara-Windows

./: .gitignore  AEOSTARA_BASELINE_REFERENCE.md  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.md  MIGRATION_PROVENANCE.md  PHASE7_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  WINDOWS_BUILD_PROOF.md  agentic-coding-policy.json  vcpkg.json
.github/scripts/: generate_wiki_pages.py  parse-swift-modules.sh
.github/workflows/: attribution-integrity.yml  compliance-audit.yml  downstream-conformance.yml  version-labeler.yml  wiki-maintenance-sweep.yml  wiki-sync.yml  windows-build.yml  workflow-integrity.yml
Resources/TestFixtures/: invariants.json  repairable_config.json  valid_config.json
Scripts/: check-architecture.ps1  verify-aeostara-guardrails.ps1
branch_profiles/: main.profile.json  platform_ios.profile.json  platform_macos.profile.json  platform_windows.profile.json
ci/: branch_alignment_checker.py  compliance_checker.py
docs/windows/: BUILD_AND_TEST.md  CLI_OPERATOR_GUIDE.md  PHASE7_STATE_REPORT.md  RELEASE_ARTIFACT_SPEC.md  TROUBLESHOOTING.md
examples/: README.md
examples/drift-and-heal/: invariants.json
examples/policy-blocked/: config.json  invariants.json
include/AeostaraCore/: AuditTrail.h  BackupManager.h  Contracts.h  DriftAnalyzer.h  HealingEngine.h  IAuditSink.h  IBackupProvider.h  IConfigAdapter.h  IFileSystem.h  IHealingEngine.h  Invariant.h  InvariantParser.h  JsonConfigAdapter.h  JsonPath.h  PolicyEvaluator.h  RepairPlanner.h  RollbackManager.h  Verification.h  Version.h
platform/windows/: PLATFORM_MANIFEST.json  README.md
specs/acceptance/: acceptance_targets.md  branch_alignment_targets.md
specs/architecture/: wiki_automation.md
src/AeostaraCLI/: CLIRunner.cpp  CLIRunner.h  CMakeLists.txt  CommandParser.cpp  CommandParser.h  Main.cpp
src/AeostaraCore/: AuditTrail.cpp  BackupManager.cpp  CMakeLists.txt  Contracts.cpp  DriftAnalyzer.cpp  FileSystem.cpp  HealingEngine.cpp  Invariant.cpp  InvariantParser.cpp  JsonConfigAdapter.cpp  JsonPath.cpp  PolicyEvaluator.cpp  RepairPlanner.cpp  RollbackManager.cpp  Verification.cpp  Version.cpp
tests/: CMakeLists.txt
tests/AeostaraArchitectureTests/: ArchitectureEnforcementTests.cpp
tests/AeostaraCLITests/: CommandParserTests.cpp
tests/AeostaraCoreTests/: AuditTrailTests.cpp  BackupManagerTests.cpp  ContractsTests.cpp  DriftAnalyzerTests.cpp  HealingEngineTests.cpp  InvariantParserTests.cpp  JsonConfigAdapterTests.cpp  JsonPathTests.cpp  PolicyEvaluatorTests.cpp  RepairPlannerTests.cpp  RollbackManagerTests.cpp  TestHelpers.h  VerificationTests.cpp
